Fix project height for standalone editor (#864)
Currently due to the styling changes required to maximise the height of
the web component in Firefox the standalone editor took up too much
space (didn't account for the top nav). This fix applies the required
`min-block-size` only to the web component

--- a/src/assets/stylesheets/Project.scss
+++ b/src/assets/stylesheets/Project.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-flow: column;
   overflow: hidden;
-  min-block-size: 100%;
   block-size: 100%;
   block-size: -moz-available;
   block-size: -webkit-fill-available;
